<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_field"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:password="true"/>
    <EditText
        android:id="@+id/post_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:lines="8"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/post_address" />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/order_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@+id/radio_pirates"
        android:hint="Choose an option">
        <RadioButton android:id="@+id/radio_pirates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_option_1"/>
        <RadioButton android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_option_2"/>
        <RadioButton android:id="@+id/radio_ninjas2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_option_3"/>
    </RadioGroup>
    <Button
        android:id="@+id/send_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send" />
</LinearLayout>